--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -163,7 +163,7 @@
         </div>
     </section>
     <section class="premiup__prizes">
-        <div class="center d-flex flex-column-reverse">
+        <div class="center d-flex flex-column-reverse flex-md-row">
             <div class="left__side col-12 col-md-6 d-flex flex-wrap p-0">
                 <div class="col-6 p-2">
                     <div class="block d-flex justify-content-center align-items-center">
