--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -38,7 +38,7 @@
                             class="nav__a c-light-text c-hover-blue transition helvetica-75">კურსები</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a href="" class="nav__a c-light-text c-hover-blue transition helvetica-75">მასტერკლასები</a>
+                        <a href="masterclass.html" class="nav__a c-light-text c-hover-blue transition helvetica-75">მასტერკლასები</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
                         <a href="" class="nav__a c-light-text c-hover-blue transition helvetica-75">შეთავაზებები</a>
