--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -467,7 +467,7 @@
                 უახლოესი ინფორმაცია მასტერკლასებზე.</span>
             <div class="scroll-parent">
 
-                <div class=" mt-5 scroll-child w-100 course-block overflow-auto">
+                <div class=" mt-5 px-3 scroll-child w-100 course-block overflow-auto">
                     <div class="block py-3 px-4  scroll-block">
                         <img class="mb-2" src="./img/Path 923.svg" alt="">
                         <span class=" col-10 f-12 helvetica-55 d-block c-light-text">ტექნოლოგიების განვითარებამ
