--- a/test-scss/courses.html
+++ b/test-scss/courses.html
@@ -155,11 +155,11 @@
             <a type="button" class="filter-drop c-black" data-toggle="collapse" data-target="#demo">ფილტრები</a>
 
         </div>
-        <div class="d-flex justify-content-between center filter__block collapse mt-3" id="demo">
-            <div class="search-input-parent col-3 p-0">
-                <input class="search-input" type="text">
+        <div class="d-flex justify-content-between flex-wrap center filter__block collapse mt-3" id="demo">
+            <div class="search-input-parent col-12 col-sm-6 col-md-3 pl-0 pr-0 pr-sm-2 mt-3">
+                <input class="search-input w-100" type="text">
             </div>
-            <div class="drop-parent col-3 ">
+            <div class="drop-parent col-12 col-sm-6 col-md-3 pr-md-2 pl-0 pr-0 mt-3">
                 <select class="drop w-100" name="" id="">
                     <option value="">ნებისმიერი</option>
                     <option value="">ნებისმიერი</option>
@@ -167,7 +167,7 @@
                     <option value="">ნებისმიერი</option>
                 </select>
             </div>
-            <div class="drop-parent col-3 pl-0">
+            <div class="drop-parent col-12 col-sm-6 col-md-3 pl-md-2 pl-0 pr-0 pr-sm-2 mt-3">
                 <select class="drop w-100" name="" id="">
                     <option value="">ნებისმიერი</option>
                     <option value="">ნებისმიერი</option>
@@ -175,7 +175,7 @@
                     <option value="">ნებისმიერი</option>
                 </select>
             </div>
-            <div class="drop-parent col-3 p-0">
+            <div class="drop-parent col-12 col-sm-6 col-md-3 p-0 mt-3">
                 <div class=" dropdown-toggle w-100 drop d-flex align-items-center justify-content-between" type="button"
                     id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span>
