--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -31,7 +31,7 @@
             <div class="d-flex d-lg-none">
 
             </div>
-            <nav class="nav d-none d-lg-flex justify-content-between w-100">
+            <nav class="nav-header d-none d-lg-flex justify-content-between w-100">
                 <ul class="ul d-flex ">
                     <li class="list mr-4 d-flex align-items-center">
                         <a href="courses.html"
@@ -41,7 +41,7 @@
                         <a href="masterclass.html" class="nav__a c-light-text c-hover-blue transition helvetica-75">მასტერკლასები</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a href="" class="nav__a c-light-text c-hover-blue transition helvetica-75">შეთავაზებები</a>
+                        <a href="Offers_packs.html" class="nav__a c-light-text c-hover-blue transition helvetica-75">შეთავაზებები</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
                         <a href="" class="nav__a c-light-text c-hover-blue transition helvetica-75">ბლოგი</a>
