--- a/test-scss/competition.html
+++ b/test-scss/competition.html
@@ -30,14 +30,14 @@
             <div class="d-flex d-lg-none">
 
             </div>
-            <nav class="nav d-none d-lg-flex justify-content-between w-100">
+            <nav class="nav-header d-none d-lg-flex justify-content-between w-100">
                 <ul class="ul d-flex ">
                     <li class="list mr-4 d-flex align-items-center">
                         <a href="courses.html"
                             class="nav__a c-light-text c-hover-blue transition helvetica-75">კურსები</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a href="masterclass.html" class="nav__a c-light-text c-hover-blue transition helvetica-75">მასტერკლასები</a>
+                        <a href="" class="nav__a c-light-text c-hover-blue transition helvetica-75">მასტერკლასები</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
                         <a href="" class="nav__a c-light-text c-hover-blue transition helvetica-75">შეთავაზებები</a>
@@ -141,99 +141,52 @@
             </div>
         </div>
     </header>
-    <section class="filter__head mb-3">
-        <div class="filter__place center d-flex align-items-center justify-content-between pt-4">
-
-            <div class="nav nav-tabs border-0" id="nav-tab" role="tablist">
-                <a class="filter-a f-14 c-light-text active show" active" id="nav-home-tab" data-toggle="tab"
-                    href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">პოპულარული</a>
-                <a class="filter-a f-14 c-light-text" id="nav-profile-tab" data-toggle="tab" href="#nav-profile"
-                    role="tab" aria-controls="nav-profile" aria-selected="false">ახალი</a>
-                <a class="filter-a f-14 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact"
-                    role="tab" aria-controls="nav-contact" aria-selected="false">ფასდაკლებით</a>
-            </div>
-            <a type="button" class="filter-drop c-black" data-toggle="collapse" data-target="#demo">ფილტრები</a>
-
-        </div>
-        <div class="d-flex justify-content-between flex-wrap center filter__block collapse mt-3" id="demo">
-            <div class="search-input-parent col-12 col-sm-6 col-md-3 pl-0 pr-0 pr-sm-2 mt-3">
-                <input class="search-input w-100" type="text">
-            </div>
-            <div class="drop-parent col-12 col-sm-6 col-md-3 pr-md-2 pl-0 pr-0 mt-3">
-                <select class="drop w-100" name="" id="">
-                    <option value="">ნებისმიერი</option>
-                    <option value="">ნებისმიერი</option>
-                    <option value="">ნებისმიერი</option>
-                    <option value="">ნებისმიერი</option>
-                </select>
-            </div>
-            <div class="drop-parent col-12 col-sm-6 col-md-3 pl-md-2 pl-0 pr-0 pr-sm-2 mt-3">
-                <select class="drop w-100" name="" id="">
-                    <option value="">ნებისმიერი</option>
-                    <option value="">ნებისმიერი</option>
-                    <option value="">ნებისმიერი</option>
-                    <option value="">ნებისმიერი</option>
-                </select>
-            </div>
-            <div class="drop-parent col-12 col-sm-6 col-md-3 p-0 mt-3">
-                <div class=" dropdown-toggle w-100 drop d-flex align-items-center justify-content-between" type="button"
-                    id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span>
-                        ნებისმიერი
-                    </span>
-                </div>
-                <div class="dropdown-menu  mt-2 px-2" aria-labelledby="dropdownMenuButton">
-                    <div class="blcok mt-2">
-                        <label class="cheks mb-0 d-flex align-items-center mt-3" for="isPoliticallyExposedPerson">
-                            <span class="mr-2 pl-2 helvetica-55 f-14 c-light-text d-flex align-items-center">
-                                <img class="mr-2" src="./img/ilu.svg" alt="">
-                                Illustrator</span>
-                            <input type="checkbox" id="isPoliticallyExposedPerson" />
-                            <span class="checkmark"></span>
-                        </label>
-                    </div>
-                    <div class="blcok mt-2">
-                        <label class="cheks mb-0 d-flex align-items-center mt-3" for="isPoliticallyExposedPerson">
-                            <span class="mr-2 pl-2 helvetica-55 f-14 c-light-text d-flex align-items-center">
-                                <img class="mr-2" src="./img/photosh.svg" alt="">
-                                Potoshop</span>
-                            <input type="checkbox" id="isPoliticallyExposedPerson" />
-                            <span class="checkmark"></span>
-                        </label>
-                    </div>
-                    <div class="blcok mt-2">
-                        <label class="cheks mb-0 d-flex align-items-center mt-3" for="isPoliticallyExposedPerson">
-                            <span class="mr-2 pl-2 helvetica-55 f-14 c-light-text d-flex align-items-center">
-                                <img class="mr-2" src="./img/frigma.svg" alt="">
-                                Figma</span>
-                            <input type="checkbox" id="isPoliticallyExposedPerson" />
-                            <span class="checkmark"></span>
-                        </label>
-                    </div>
-                    <div class="blcok mt-2">
-                        <label class="cheks mb-0 d-flex align-items-center mt-3" for="isPoliticallyExposedPerson">
-                            <span class="mr-2 pl-2 helvetica-55 f-14 c-light-text d-flex align-items-center">
-                                <img class="mr-2" src="./img/xd.svg" alt="">
-                                XD</span>
-                            <input type="checkbox" id="isPoliticallyExposedPerson" />
-                            <span class="checkmark"></span>
-                        </label>
-                    </div>
-                </div>
-            </div>
-
-
+    <section class="mini__header border-bottom">
+        <div class="center">
+            <nav style="height: 60px;" class="nav-header">
+                <ul class="d-flex align-items-center">
+                    <li class="list mr-4 d-flex align-items-center">
+                        <a style="height: 60px;" href="" class="nav__a c-light-text c-hover-blue transition helvetica-75">პაკეტები</a>
+                    </li>
+                    <li class="list mr-4 d-flex align-items-center">
+                        <a style="height: 60px;" href="" class="nav__a c-light-text c-hover-blue transition helvetica-75">ფასდაკლებები</a>
+                    </li>
+                    <li class="list mr-4 d-flex align-items-center">
+                        <a style="height: 60px;" href="" class="nav__a c-light-text c-hover-blue transition helvetica-75">კონკუსრები</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </section>
+
+
+
+    <div class="filter__place center d-flex align-items-center justify-content-between mt-3">
+        <div class="nav nav-tabs border-0" id="nav-tab" role="tablist">
+            <a class="filter-a f-14 c-light-text active show" active" id="nav-home-tab" data-toggle="tab"
+                href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">ყველა</a>
+            <a class="filter-a f-14 c-light-text" id="nav-profile-tab" data-toggle="tab" href="#nav-profile"
+                role="tab" aria-controls="nav-profile" aria-selected="false">დიზაინი</a>
+            <a class="filter-a f-14 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact"
+                role="tab" aria-controls="nav-contact" aria-selected="false">დეველოპმენტი</a>
+            <a class="filter-a f-14 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact"
+                role="tab" aria-controls="nav-contact" aria-selected="false">მარკეტინგი</a>
+            <a class="filter-a f-14 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact"
+                role="tab" aria-controls="nav-contact" aria-selected="false">ბიზნესი</a>
+        </div>
+
+    </div>
+
     <section class="popular__courses">
         <div class="center">
-            <div class="d-flex justify-content-between flex-wrap main courses__main">
+            <div class="d-flex justify-content-between flex-wrap main courses__main master-class">
+                <!-- for sale overlay add sale class to  block -->
                 <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
                             <div class="img-block d-flex align-items-center pl-3">
-                                <img src="./img/Group 342.svg" alt="">
+                                <img class="w-100" src="./img/Group 342.svg" alt="">
                             </div>
                             <img src="./img/face.svg" alt="">
                         </div>
@@ -252,74 +205,7 @@
                                 <div class="left__side d-flex align-items-center flex-wrap">
                                     <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
                                     <!-- add like__remove class to span for row effect -->
-
-                                </div>
-                                <div class="right__side">
-                                    <button class=" helvetica-75 blue-hover-button">გაიგე მეტი</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="block  col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
-                    <div class="d-flex flex-column inside__block">
-
-                        <div class="up__side bc-orange d-flex justify-content-between align-items-end overflow-hidden ">
-                            <div class="img-block d-flex align-items-center pl-3">
-                                <img src="./img/Group 342.svg" alt="">
-                            </div>
-                            <img src="./img/face.svg" alt="">
-                        </div>
-                        <div class="down__side py-3">
-
-                            <div class="d-flex- flex-column px-3 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
-                                <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
-                                    შესაძლებელი გახადა, რომ სხვადასხვა
-                                    პროფესიის ადამიანებმა თავად
-                                    შეძლონ საკუთარი იდეების რეალიზება.</span>
-                            </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-
-                                </div>
-                                <div class="right__side">
-                                    <button class=" helvetica-75 orange-hover-button">გაიგე მეტი</button>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div
-                    class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
-                    <div class="d-flex flex-column inside__block">
-
-                        <div class="up__side bc-purple d-flex justify-content-between align-items-end overflow-hidden ">
-                            <div class="img-block d-flex align-items-center pl-3">
-                                <img src="./img/Group 342.svg" alt="">
-                            </div>
-                            <img src="./img/face.svg" alt="">
-                        </div>
-                        <div class="down__side py-3">
-
-                            <div class="d-flex- flex-column px-3 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
-                                <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
-                                    შესაძლებელი გახადა, რომ სხვადასხვა
-                                    პროფესიის ადამიანებმა თავად
-                                    შეძლონ საკუთარი იდეების რეალიზება.</span>
-                            </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-
+                                    <span class="f-20 ml-3 helvetica-75 c-black like__remove">1250 ₾</span>
                                 </div>
                                 <div class="right__side">
                                     <button class=" helvetica-75 purple-hover-button">გაიგე მეტი</button>
@@ -334,7 +220,7 @@
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
                             <div class="img-block d-flex align-items-center pl-3">
-                                <img src="./img/Group 342.svg" alt="">
+                                <img class="w-100" src="./img/Group 342.svg" alt="">
                             </div>
                             <img src="./img/face.svg" alt="">
                         </div>
@@ -353,22 +239,22 @@
                                 <div class="left__side d-flex align-items-center flex-wrap">
                                     <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
                                     <!-- add like__remove class to span for row effect -->
-
+                                    <span class="f-20 ml-3 helvetica-75 c-black like__remove">1250 ₾</span>
                                 </div>
                                 <div class="right__side">
-                                    <button class=" helvetica-75 blue-hover-button">გაიგე მეტი</button>
+                                    <button class=" helvetica-75 yellow-hover-button">გაიგე მეტი</button>
+
                                 </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
-                <div class="block  col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
                     <div class="d-flex flex-column inside__block">
 
-                        <div class="up__side bc-orange d-flex justify-content-between align-items-end overflow-hidden ">
+                        <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
                             <div class="img-block d-flex align-items-center pl-3">
-                                <img src="./img/Group 342.svg" alt="">
+                                <img class="w-100" src="./img/Group 342.svg" alt="">
                             </div>
                             <img src="./img/face.svg" alt="">
                         </div>
@@ -386,41 +272,8 @@
                             <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
                                 <div class="left__side d-flex align-items-center flex-wrap">
                                     <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-
-                                </div>
-                                <div class="right__side">
-                                    <button class=" helvetica-75 orange-hover-button">გაიგე მეტი</button>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div
-                    class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
-                    <div class="d-flex flex-column inside__block">
-
-                        <div class="up__side bc-purple d-flex justify-content-between align-items-end overflow-hidden ">
-                            <div class="img-block d-flex align-items-center pl-3">
-                                <img src="./img/Group 342.svg" alt="">
-                            </div>
-                            <img src="./img/face.svg" alt="">
-                        </div>
-                        <div class="down__side py-3">
-
-                            <div class="d-flex- flex-column px-3 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
-                                <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
-                                    შესაძლებელი გახადა, რომ სხვადასხვა
-                                    პროფესიის ადამიანებმა თავად
-                                    შეძლონ საკუთარი იდეების რეალიზება.</span>
-                            </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-
+                                    <!-- add like__remove class to span for row effect -->
+                                    <span class="f-20 ml-3 helvetica-75 c-black like__remove">1250 ₾</span>
                                 </div>
                                 <div class="right__side">
                                     <button class=" helvetica-75 purple-hover-button">გაიგე მეტი</button>
