--- a/test-scss/competition_1.html
+++ b/test-scss/competition_1.html
@@ -161,164 +161,88 @@
             </nav>
         </div>
     </section>
-
-
-
-    <div class="filter__place center d-flex align-items-center justify-content-between mt-3">
-        <div class="nav nav-tabs border-0 d-none d-md-flex" id="nav-tab" role="tablist">
-            <a class="filter-a f-14 c-light-text active show" active" id="nav-home-tab" data-toggle="tab"
-                href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">ყველა</a>
-            <a class="filter-a f-14 c-light-text" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab"
-                aria-controls="nav-profile" aria-selected="false">დიზაინი</a>
-            <a class="filter-a f-14 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab"
-                aria-controls="nav-contact" aria-selected="false">დეველოპმენტი</a>
-            <a class="filter-a f-14 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab"
-                aria-controls="nav-contact" aria-selected="false">მარკეტინგი</a>
-            <a class="filter-a f-14 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab"
-                aria-controls="nav-contact" aria-selected="false">ბიზნესი</a>
-        </div>
-        <div class="drop-parent col-12 col-sm-6 col-md-3 mt-3 d-block d-md-none">
-            <div class=" dropdown-toggle w-100 drop d-flex align-items-center justify-content-between" type="button"
-                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span>
-                    ნებისმიერი
-                </span>
-            </div>
-            <div class="dropdown-menu mt-2 px-2" aria-labelledby="dropdownMenuButton">
-                <div class="blcok pt-2 pb-2 pointer hover-bc-banner">
-                    <span class="mr-2 pl-2 helvetica-55 f-14 c-light-text d-flex align-items-center">
-                        დიზაინი</span>
-                </div>
-                <div class="blcok pt-2 pb-2 pointer hover-bc-banner">
-                    <span class="mr-2 pl-2 helvetica-55 f-14 c-light-text d-flex align-items-center">
-                        დეველოპმენტი</span>
-                </div>
-                <div class="blcok pt-2 pb-2 pointer hover-bc-banner">
-                    <span class="mr-2 pl-2 helvetica-55 f-14 c-light-text d-flex align-items-center">
-                        მარკეტინგი</span>
-                </div>
-                <div class="blcok pt-2 pb-2 pointer hover-bc-banner">
-                    <span class="mr-2 pl-2 helvetica-55 f-14 c-light-text d-flex align-items-center">
-                        ბიზნესი</span>
-                </div>
-            </div>
-        </div>
-
-
+    <div class="center mt-3">
+        <a class="btn btn-light" href="competition.html">
+            <img src="./img/back.svg" alt="">
+            back</a>
     </div>
 
-    <section class="popular__courses">
-        <div class="center">
-            <div class="d-flex justify-content-between flex-wrap main courses__main master-class">
-                <!-- for sale overlay add sale class to  block -->
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
-                    <div class="d-flex flex-column inside__block">
-
-                        <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
-                            <div class="img-block d-flex align-items-center pl-3">
-                                <img class="w-100" src="./img/Group 342.svg" alt="">
-                            </div>
-                            <img src="./img/face.svg" alt="">
-                        </div>
-                        <div class="down__side py-3">
-
-                            <div class="d-flex- flex-column px-3 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
-                                <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
-                                    შესაძლებელი გახადა, რომ სხვადასხვა
-                                    პროფესიის ადამიანებმა თავად
-                                    შეძლონ საკუთარი იდეების რეალიზება.</span>
-                            </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                    <!-- add like__remove class to span for row effect -->
-                                    <span class="f-20 ml-3 helvetica-75 c-black like__remove">1250 ₾</span>
-                                </div>
-                                <div class="right__side">
-                                    <button class=" helvetica-75 purple-hover-button">გაიგე მეტი</button>
-
-                                </div>
-                            </div>
-                        </div>
+    <section class="blog__design pb-5">
+        <div class="center d-flex mt-3">
+            <div class="left__side pl-0 pr-3 col-4 d-none d-md-flex">
+                <img class="w-100" src="./img/vlog.svg" alt="">
+            </div>
+            <div class="right__side col-12 col-md-8">
+                <div class="up__side d-flex justify-content-between align-items-center flex-wrap">
+                    <h1 class="f-20 c-black mt-2 helvetica-75">WEB დეველოპმენტი</h1>
+                    <div class="f-14 c-light-text mt-2 helvetica-55">დარჩენილია
+                        <span class=" helvetica-75 c-black bc-banner br-5 p-1">95</span>:<span
+                            class=" helvetica-75 c-black bc-banner br-5 p-1">45</span>:<span
+                            class=" helvetica-75 c-black bc-banner br-5 p-1">25</span>
                     </div>
+
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
-                    <div class="d-flex flex-column inside__block">
-
-                        <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
-                            <div class="img-block d-flex align-items-center pl-3">
-                                <img class="w-100" src="./img/Group 342.svg" alt="">
-                            </div>
-                            <img src="./img/face.svg" alt="">
-                        </div>
-                        <div class="down__side py-3">
-
-                            <div class="d-flex- flex-column px-3 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
-                                <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
-                                    შესაძლებელი გახადა, რომ სხვადასხვა
-                                    პროფესიის ადამიანებმა თავად
-                                    შეძლონ საკუთარი იდეების რეალიზება.</span>
-                            </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                    <!-- add like__remove class to span for row effect -->
-                                    <span class="f-20 ml-3 helvetica-75 c-black like__remove">1250 ₾</span>
-                                </div>
-                                <div class="right__side">
-                                    <button class=" helvetica-75 yellow-hover-button">გაიგე მეტი</button>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
-                    <div class="d-flex flex-column inside__block">
-
-                        <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
-                            <div class="img-block d-flex align-items-center pl-3">
-                                <img class="w-100" src="./img/Group 342.svg" alt="">
-                            </div>
-                            <img src="./img/face.svg" alt="">
-                        </div>
-                        <div class="down__side py-3">
-
-                            <div class="d-flex- flex-column px-3 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
-                                <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
-                                    შესაძლებელი გახადა, რომ სხვადასხვა
-                                    პროფესიის ადამიანებმა თავად
-                                    შეძლონ საკუთარი იდეების რეალიზება.</span>
-                            </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                    <!-- add like__remove class to span for row effect -->
-                                    <span class="f-20 ml-3 helvetica-75 c-black like__remove">1250 ₾</span>
-                                </div>
-                                <div class="right__side">
-                                    <button class=" helvetica-75 purple-hover-button">გაიგე მეტი</button>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+                <span class="f-14 d-block mt-4 c-light-text helvetica-55">25 ივნისი, 2020</span>
+                <img class="w-100 mt-3 d-flex d-md-none" src="./img/vlog.svg" alt="">
+                <span class="f-14 d-block mt-4 c-light-text helvetica-55">შექმენი ციფრული ინდუსტრიის აკადემიის ლოგოს
+                    რედიზაინი; ატვირთე ნამუშევარი
+                    ფეისბუქზე ან ინსტაგრამზე; გამოიყენე ჰეშთეგი #logodigitaledu და მონიშნე
+                    ციფრული ინდუსტრიის აკადემია.შექმენი ციფრული ინდუსტრიის აკადემიის ლოგოს
+                    რედიზაინი; ატვირთე ნამუშევარი ფეისბუქზე ან ინსტაგრამზე; გამოიყენე ჰეშთეგი
+                    #logodigitaledu და მონიშნე ციფრული ინდუსტრიის აკადემია.</span>
+                <button class="d-block mx-auto mx-md-0 helvetica-75 blue-button mt-5">გაიგე მეტი</button>
             </div>
 
+        </div>
         </div>
     </section>
 
+
+
+
+
+
+    <section class="prizes mt-5">
+        <div class="center">
+            <h1 class="f-20 c-black mt-2 helvetica-75">პრიზები</h1>
+
+            <div class="block mt-4 d-flex align-items-center flex-wrap justify-content-center justify-content-md-start">
+                <div class="blocks d-flex col-12 col-md-4 pl-0 mt-3 mt-md-0">
+                    <div class="left__side c-blue f-28 helvetica-55 bc-banner number d-flex justify-content-center align-items-center">
+                        1
+                    </div>
+                    <div class="right_side ml-2">
+                        <span class="f-16 d-block c-black helvetica-55">უფასო კურსი</span>
+                        <span class="f-14 d-block mt-3 c-light-text helvetica-55 col-10">პირველ ადგილზე გასული 
+                            მიიღებს უფასო კურსს.</span>
+
+                    </div>
+                </div>
+                <div class="blocks d-flex col-12 col-md-4 pl-0 mt-3 mt-md-0">
+                    <div class="left__side c-blue f-28 helvetica-55 bc-banner number d-flex justify-content-center align-items-center">
+                        1
+                    </div>
+                    <div class="right_side ml-2">
+                        <span class="f-16 d-block c-black helvetica-55">უფასო კურსი</span>
+                        <span class="f-14 d-block mt-3 c-light-text helvetica-55 col-10">პირველ ადგილზე გასული 
+                            მიიღებს უფასო კურსს.</span>
+
+                    </div>
+                </div>
+                <div class="blocks d-flex col-12 col-md-4 pl-0 mt-3 mt-md-0">
+                    <div class="left__side c-blue f-28 helvetica-55 bc-banner number d-flex justify-content-center align-items-center">
+                        1
+                    </div>
+                    <div class="right_side ml-2">
+                        <span class="f-16 d-block c-black helvetica-55">უფასო კურსი</span>
+                        <span class="f-14 d-block mt-3 c-light-text helvetica-55 col-10">პირველ ადგილზე გასული 
+                            მიიღებს უფასო კურსს.</span>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
