vlog mobile web

--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -44,7 +44,7 @@
                         <a href="Offers_packs.html" class="nav__a c-light-text c-hover-blue transition helvetica-75">შეთავაზებები</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a href="" class="nav__a c-light-text c-hover-blue transition helvetica-75">ბლოგი</a>
+                        <a href="vlog.html" class="nav__a c-light-text c-hover-blue transition helvetica-75">ბლოგი</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
                         <a href="" class="nav__a c-light-text c-hover-blue transition helvetica-75">ჩვენ შესახებ</a>
